--- a/index.html
+++ b/index.html
@@ -13,21 +13,32 @@
             Problématique : <i>à définir</i>
         </p>
     </article>
+    <article>
+        <h2>PROJET:</h2>
+        <p>
+            Créer un modèle informatique d'un réseau électrique (réseau de transport et réseau de distribution)<br>
+            Plus spécifiquement un réseau de distribution alimenté par des énergies intermittentes (et renouvelables)<br>
+            Regarder les agncements, par rapport aux pertes, qui permettent de maximiser le rendement des sources.<br>
+            Spécifiquement dans le cas rural, où le réseau de transport global est plus fragile.<br>
+        </p>
+
+    </article>
 
 
     <article>
-        <h2>HISTORIQUE:</h2>
+        <h2>JOURNAL:</h2>
     <h3>COURS 1</h3>
     <p>Présentation des attendus</p>
 
     <h3>COURS 2</h3>
     <p>Création du site présentation du themes et possibilités (ça fait beaucoup)</p>
 
-    <h3>COURS 3</h3>
+    <h3>COURS 3 → 4</h3>
     <p>Début biblio,<br>
         <ul>Sujets recherchés :
-        <li>Gestion de réseau electrique pour maximiser l'efficacité d'énergies renouvelables</li>
-        <li>Distribution énergétique dans un réseau</li>
+        <li>Comment optimiser la distribution dans un réseau électrique local basé sur des sources renouvelables intermittentes</li>
+        <li class="sec">Distribution énergétique dans un réseau</li>
+        <li class="sec">Gestion de réseau electrique pour maximiser l'efficacité d'énergies renouvelables</li>
     </ul>
     </p>
     </article>
