--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
 <body>
     <h1>TIPE</h1>
 
-    <article>
+    <article class="principal">
         <h2>INFOS IMPORTANTES</h2>
         <p>
             Va changer souvent<br>
             Thème du TIPE : Distribution électrique dans un réseau<br>
-            Problématique : <i>à définir</i>
+            Problématique : <i>à définir</i><br>
+            Matières : Info principalement<br>
+
         </p>
     </article>
     <article>
@@ -18,10 +20,13 @@
         <p>
             Créer un modèle informatique d'un réseau électrique (réseau de transport et réseau de distribution)<br>
             Plus spécifiquement un réseau de distribution alimenté par des énergies intermittentes (et renouvelables)<br>
-            Regarder les agncements, par rapport aux pertes, qui permettent de maximiser le rendement des sources.<br>
+            Regarder les agencements, par rapport aux pertes, qui permettent de maximiser le rendement des sources<br>
             Spécifiquement dans le cas rural, où le réseau de transport global est plus fragile.<br>
         </p>
-
+        <p>
+            Simuler une micro-grid avec des acteurs simples : producteurs, consommateur,<br>
+            des câbles avec des pertes, des transformateurs et échanges avec un réseau global.<br>
+        </p>
     </article>
 
 
