--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
     </p>
     </article>
 
+    <article>
+        <h2>REFERENCES :</h2>
+        <p>
+            wikipedia :)<br>
+        </p>
+    </article>
 
     <!-- <a href="exemples.html">Des exemples</a> -->
 </body>
