wouhou pleins de nouveaux trucs

--- a/index.html
+++ b/index.html
@@ -27,8 +27,23 @@
             Simuler une micro-grid avec des acteurs simples : producteurs, consommateur,<br>
             des câbles avec des pertes, des transformateurs et échanges avec un réseau global.<br>
         </p>
+        <p>
+            <ul>Prérequis sciencifiques :
+                <li>Théorie des graphes</li>
+                <li>Fonctionnement des réseaux électriques à grande échelle</li>
+            </ul>
+        </p>
     </article>
 
+    <article>
+        <h2>C.A.D. : </h2>
+        <p>
+            Avec la transition énergétique, de plus en plus de sources renouvelables s'intègrent dans nos réseaux.<br>
+            Produisant une tension bien plus faible que des sources comme le nucléaire ou le charbon, elles sont reliées directement au réseau de distribution et non de transport.<br>
+            Ces réseaux, déstinés à transporter l'énergie sur des distances + courtes, présente une perte plus grande sur de longs trajets.<br>
+            Comment donc faudrait-il les arranger pour que cette perte (et donc le rendement) soit minimale (maximal) ?<br>
+        </p>
+    </article>
 
     <article>
         <h2>JOURNAL:</h2>
@@ -38,8 +53,8 @@
     <h3>COURS 2</h3>
     <p>Création du site présentation du themes et possibilités (ça fait beaucoup)</p>
 
-    <h3>COURS 3 → 4</h3>
-    <p>Début biblio,<br>
+    <h3>COURS 3 → 5</h3>
+    <p>Biblio,<br>
         <ul>Sujets recherchés :
         <li>Comment optimiser la distribution dans un réseau électrique local basé sur des sources renouvelables intermittentes</li>
         <li class="sec">Distribution énergétique dans un réseau</li>
@@ -51,7 +66,8 @@
     <article>
         <h2>REFERENCES :</h2>
         <p>
-            wikipedia :)<br>
+            Page wiki de la <a href="https://fr.wikipedia.org/wiki/R%C3%A9seau_de_distribution_%C3%A9lectrique#R%C3%A9seau" target="_blank">distribution dans un réseau</a><br>
+            Cours sur les <a href="POLYCOPIE COURS MORE GUERRAICHE KHALED ESGEEO pour Moodle.pdf" target="_blank">réseaux électriques</a><br>
         </p>
     </article>
 
