--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
             des câbles avec des pertes, des transformateurs et échanges avec un réseau global.<br>
         </p>
         <p>
-            <ul>Prérequis sciencifiques :
+            Prérequis sciencifiques :
+            <ul>
                 <li>Théorie des graphes</li>
                 <li>Fonctionnement des réseaux électriques à grande échelle</li>
             </ul>
@@ -41,7 +42,7 @@
             Avec la transition énergétique, de plus en plus de sources renouvelables s'intègrent dans nos réseaux.<br>
             Produisant une tension bien plus faible que des sources comme le nucléaire ou le charbon, elles sont reliées directement au réseau de distribution et non de transport.<br>
             Ces réseaux, déstinés à transporter l'énergie sur des distances + courtes, présente une perte plus grande sur de longs trajets.<br>
-            Comment donc faudrait-il les arranger pour que cette perte (et donc le rendement) soit minimale (maximal) ?<br>
+            Comment donc faudrait-il les arranger pour que cette perte soit minimale (et donc le rendement maximal) ?<br>
         </p>
     </article>
 
@@ -59,6 +60,7 @@
         <li>Comment optimiser la distribution dans un réseau électrique local basé sur des sources renouvelables intermittentes</li>
         <li class="sec">Distribution énergétique dans un réseau</li>
         <li class="sec">Gestion de réseau electrique pour maximiser l'efficacité d'énergies renouvelables</li>
+        <li class="sec">Théorie des graphes</li>
     </ul>
     </p>
     </article>
